# Papertrail

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini.bak  pyproject.toml  pytest.ini  requirement.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
Lucid/: requirements.txt
Lucid/Lucid/: settings.py  urls.py
Papertrail/: asgi.py  responses.py  settings.py  urls.py  utils.py  views.py  wsgi.py
Papertrail/Papertrail/: asgi.py  settings.py  wsgi.py
Papertrail/settings/: __init__.py  base.py  local.py  production.py
accounting/: resources.py  services.py  tests.py  urls.py  views.py
core/: adapters.py  admin.py  apps.py  backends.py  context_processors.py  forms.py  middleware.py  models.py  services.py  signals.py  tasks.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_rename_auto_archive_expired_usersettings_auto_archive_expired_records_and_more.py  0003_alter_usersettings_options_usersettings_created_at_and_more.py  0004_usersettings_expiring_notifications_advance_time_and_more.py  0005_usersettings_enable_email_notifications_and_more.py  0006_usersettings_auto_create_and_organize_folders.py  0007_usersettings_auto_delete_deleted_documents.py
core/services/: __init__.py  dashboard.py  notifications.py
core/templatetags/: sidebar_tags.py
documents/: admin.py  apps.py  filters.py  forms.py  models.py  ocr_helpers.py  scan_doc.py  signals.py  storage.py  storage_helpers.py  tasks.py  tests.py  upload_utils.py  urls.py  validators.py  views.py
documents/migrations/: 0001_initial.py  0002_document_data_associated_record_and_more.py  0003_alter_document_data_associated_record.py  0004_alter_document_data_associated_record.py  0005_alter_document_data_associated_record.py  0006_document_data_status.py  0007_remove_document_data_status.py  0008_document_data_is_main.py  0009_document_data_notes.py  0010_document_data_title.py  0011_rename_document_data_documentdata.py  0012_documentdata_file_extension.py  0013_documentdata_documents_d_user_id_a6b392_idx_and_more.py  0014_remove_documentdata_documents_d_date_ad_26a650_idx_and_more.py  0015_alter_documentdata_file_hash_and_more.py  0016_documentdata_status.py  0017_remove_documentdata_status.py  0018_documentdata_status_with_choices.py  0019_remove_documentdata_documents_doc_status_date_idx_and_more.py  0020_alter_documentdata_status.py  0021_documentdata_idx_doc_list_cover_and_more.py  0022_alter_documentdata_options_and_more.py  0023_documentdata_idx_doc_orphaned_cleanup_and_more.py  0024_documentdata_ocr_retries.py  0025_documentdata_ocr_error.py  0026_documentdata_deleted_at.py  0026_documentdata_file_size_documentdata_mime_type_and_more.py  0027_documentdata_file_size_documentdata_mime_type_and_more.py  0028_add_is_active_to_documentdata.py  0029_backfill_is_active.py  0030_historicaldocumentdata.py  0031_remove_duplicate_created_at.py
documents/services/: __init__.py  cleanup.py  confirmation.py  deletion.py  detail.py  ocr.py  upload.py  validation.py
documents/views/: __init__.py  detail.py  list.py  upload.py
plaid_integration/: admin.py  apps.py  models.py  plaid_client.py  services.py  tasks.py  tests.py  urls.py  views.py
plaid_integration/migrations/: 0001_initial.py  0002_transaction_record.py  0003_delete_transaction.py  0004_plaiditem_last_error_at_plaiditem_last_error_code_and_more.py  0005_plaiditem_account_name.py  0006_rename_account_name_plaiditem_institution_name_and_more.py
plaid_integration/views/: __init__.py  link.py  status.py  webhook.py
records/: admin.py  apps.py  constants.py  filters.py  forms.py  matching.py  models.py  services.py  signals.py  tasks.py  tests.py  types.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_rename_product_record_products_record_description.py  0003_alter_record_title.py  0004_alter_record_record_type.py  0005_alter_record_record_type.py  0006_alter_record_record_type.py  0007_rename_description_record_notes.py  0008_record_last_edited.py  0009_alter_record_last_edited.py  0010_record_color_group.py  0011_alter_record_color_group.py  0012_remove_record_color_group.py  0013_alter_record_record_type.py  0014_record_records_rec_user_id_4d2ecf_idx_and_more.py  0015_record_idx_record_list_cover_and_more.py  0016_alter_record_options_and_more.py  0017_record_idx_record_expiry_active_user_and_more.py  0018_record_expiry_notification_sent.py  0019_folder_record_folder.py  0020_record_plaid_item_record_plaid_transaction_id.py  0021_alter_record_folder_alter_record_record_type.py  0022_merge_log.py  0023_add_merge_log_indexes_and_constraint.py  0024_add_mergelog_search_text.py  0025_add_mergelog_trigram_index.py  0026_record_original_data.py  0026_remove_mergelog_idx_mergelog_search_trgm.py  0027_activitylog_and_more.py  0027_record_fields_update.py  0028_historicalrecord.py  0028_recordevent_and_more.py  0029_add_nickname_remove_payment_method_locked.py  0030_add_auditlog_idempotency_key.py  0031_alter_historicalrecord_balance_and_more.py  0032_add_record_search_trigram_indexes.py
records/services/: __init__.py  archive.py  record_creation.py
records/templatetags/: form_tags.py
records/tests/: _helpers.py  test_filters.py  test_folder_views.py  test_forms.py  test_matching.py  test_models.py  test_record_views.py  test_services.py  test_tasks.py
records/views/: __init__.py  create.py  export.py  folders.py  history.py  merges.py  record_state.py  records.py
templates/: 404.html  429.html  500.html  base.html  components.yaml
templates/account/: confirm_login_code.html  email.html  email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  signup.html  verification_sent.html
templates/components/: container.html  form.html  form_field.html
templates/core/: pagination_controls.html  sidebar.html  toast.html
templates/documents/: upload_base.html
templates/notifications/: base_notification.html  base_notification.txt  expiring_record_email.html  expiring_record_email.txt
(+73 files in other folders)
