[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "RSE", # flake8-raise
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "Q",   # flake8-quotes
    "PIE", # flake8-pie
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N802",  # function name should be lowercase (Django views use snake_case)
    "N803",  # argument name should be lowercase
    "N806",  # variable in function should be lowercase
    "N999",  # Papertrail is the Django project package name
]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*" = ["ALL"]
"*/tests.py" = ["ALL"]
"*test_*" = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    ".*migrations.*",
    ".*tests.*",
    "venv/",
    "__pycache__/",
    "manage.py",
]

[[tool.mypy.overrides]]
module = [
    "django.*",
    "django_qstash.*",
    "webpush.*",
    "anymail.*",
    "allauth.*",
    "django_filters.*",
    "django_ratelimit.*",
    "boto3.*",
    "botocore.*",
    "PIL.*",
    "filetype.*",
    "numpy.*",
    "cv2.*",
    "deskew.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "*.models",
    "Papertrail.settings.*",
]
disable_error_code = [
    "var-annotated",
    "valid-type",
    "misc",
    "attr-defined",
    "no-untyped-def",
]

[[tool.mypy.overrides]]
module = [
    "documents.storage",
    "documents.validators",
    "documents.apps",
    "core.apps",
    "core.middleware",
    "core.templatetags.*",
    "records.templatetags.*",
    "core.context_processors",
    "core.signals",
    "documents.signals",
    "Papertrail.urls",
    "records.filters",
    "documents.filters",
    "records.forms",
    "documents.forms",
    "core.forms",
    "documents.views",
    "records.views",
    "core.views",
    "core.backends",
    "core.tasks",
    "core.services.notifications",
    "documents.ocr_helpers",
    "documents.tasks",
    "records.services",
]
disable_error_code = [
    "no-untyped-def",
    "return-value",
    "union-attr",
    "attr-defined",
    "arg-type",
    "assignment",
    "valid-type",
    "no-any-return",
    "var-annotated",
    "misc",
]

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"]  # assert used - common in tests

[tool.coverage.run]
source = ["core", "documents", "records", "plaid_integration"]
omit = ["*/migrations/*", "*/tests/*", "*/test_*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "except ImportError",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "Papertrail.settings.local"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "--numprocesses=auto",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]
